--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,11 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 appcompat = "1.6.1"
 material = "1.8.0"
+ktorVersion = "2.3.0"
+koinVersion = "3.2.2"
+coroutineVersion = "1.6.4"
+com-android-library = "8.1.0-alpha11"
+org-jetbrains-kotlin-jvm = "1.8.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -16,10 +21,23 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+ktorCore = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktorVersion" }
+ktorLogging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktorVersion" }
+ktorSerialization = { group = "io.ktor", name = "ktor-client-serialization", version.ref = "ktorVersion" }
+ktorAndroidClient = { group = "io.ktor", name = "ktor-client-android", version.ref = "ktorVersion" }
+ktorHttpClient = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktorVersion" }
+ktorIOSClient = { group = "io.ktor", name = "ktor-client-ios", version.ref = "ktorVersion" }
+koinCore = { group = "io.insert-koin", name = "koin-core", version.ref = "koinVersion" }
+coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutineVersion" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
+com-android-library = { id = "com.android.library", version.ref = "com-android-library" }
+org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
 
 [bundles]
+ktor = [ "ktorCore", "ktorLogging", "ktorSerialization" ]
+ktorAndroid = [ "ktorHttpClient", "ktorAndroidClient" ]
+koin = [ "koinCore", "coroutines" ]
 
